Fixes alignment artefacts on screenshots due to inline-block being set. - #325

--- a/productions/static/productions/css/components/carousel.less
+++ b/productions/static/productions/css/components/carousel.less
@@ -102,6 +102,7 @@
 		line-height: @carouselHeight;
 		text-align: center;
 		vertical-align: middle;
+		font-size: 0;
 
 		img {
 			margin: auto;
